--- a/templates/lfmainmenu.css
+++ b/templates/lfmainmenu.css
@@ -8,12 +8,9 @@
 	left:100%;
 	margin-top:-6px;
 	margin-left:-1px;
-	-webkit-border-radius:0 6px 6px 6px;
-	-moz-border-radius:0 6px 6px 6px;
-	border-radius:0 6px 6px 6px;
 }
 .dropdown-submenu:hover>.dropdown-menu {
-	display:block;
+	/* display:block; */
 }
 .dropdown-submenu>a:after {
 	display:block;
@@ -23,21 +20,29 @@
 	height:0;
 	border-color:transparent;
 	border-style:solid;
-	border-width:5px 0 5px 5px;
-	border-left-color:#cccccc;
+	border-width:5px 5px 5px 5px;
+	border-left-color:#888888;
 	margin-top:5px;
 	margin-right:-10px;
 }
-.dropdown-submenu:hover>a:after {
-	border-left-color:#ffffff;
-}
+
 .dropdown-submenu.pull-left {
 	float:none;
 }
 .dropdown-submenu.pull-left>.dropdown-menu {
 	left:-100%;
 	margin-left:10px;
-	-webkit-border-radius:6px 0 6px 6px;
-	-moz-border-radius:6px 0 6px 6px;
-	border-radius:6px 0 6px 6px;
+}
+
+#ilTopNav .lfCustomDropDown ul.dropdown-menu .dropdown-toggle {
+	text-transform: none;
+}
+
+.lfAdminDropDown {
+	position:relative;
+}
+
+#ilTopNav .lfAdminDropDown  ul.dropdown-menu {
+	left: 100px;
+	position: absolute;
 }
